  most atomic manner provided by the operating system to set (or clear)
  the close-on-exec flag at the same time the file descriptor is created,
  reducing the risk of race conditions with `exec` or `create_process`
  calls running in other threads, and improving security.  Also: add a
  `O_KEEPEXEC` flag for `openfile` by symmetry with `O_CLOEXEC`.
  (Xavier Leroy)

- MPR#7339, GPR#787: Support the '0 dimension' case for bigarrays
  (see Bigarray documentation)
  (Laurent Mazare,
   review by Gabriel Scherer, Alain Frisch and Hezekiah M. Carty)

* PR#7342, GPR#797: fix Unix.read on pipes with no data left on Windows
  it previously raised an EPIPE error, it now returns 0 like other OSes
  (Jonathan Protzenko)

- PR#7457: a case of double free in the systhreads library (POSIX implementation)
  (Xavier Leroy, report by Chet Murthy)

- GPR#997: Deprecate Bigarray.*.map_file and add Unix.map_file as a
  first step towards moving Bigarray to the stdlib
  (Jeremie Dimino)

- GPR#996: correctly update caml_top_of_stack in systhreads
  (Fabrice Le Fessant)

### Bytecode debugger (ocamldebug):

- GPR#977: Catch Out_of_range in "list" command
  (Yunxing Dai)

### Tools:

- PR#5163: ocamlobjinfo, dump globals defined by bytecode executables
  (Stéphane Glondu)

- PR#7333: ocamldoc, use the first sentence of text file as
  a short description in overviews.
  (Florian Angeletti)

- GPR#848: ocamldoc, escape link targets in HTML output
  (Etienne Millon, review by Gabriel Scherer, Florian Angeletti and
  Daniel Bünzli)

- GPR#986: ocamldoc, use relative paths in error message
  to solve ocamlbuild+doc usability issue (ocaml/ocamlbuild#79)
  (Gabriel Scherer, review by Florian Angeletti, discussion with Daniel Bünzli)

- GPR#1017: ocamldoc, add an option to detect code fragments that could be
  transformed into a cross-reference to a known element.
  (Florian Angeletti, review and suggestion by David Allsopp)

- clarify ocamldoc text parsing error messages
  (Gabriel Scherer)
